# vibe-coding-asset-bundle-template

./: .gitignore  README.md  databricks_template_schema.json
.cursor/rules/: delta_live_tables.mdc
template/: __preamble.tmpl
template/{{.project_name}}/: .continuerules  Makefile  databricks.yml.tmpl
template/{{.project_name}}/.continue/docs/: dab_docs.yaml  dlt_docs.yaml
template/{{.project_name}}/.continue/mcpServers/: revodata_databricks_mcp.yml.tmpl
template/{{.project_name}}/.cursor/: mcp.json.tmpl
template/{{.project_name}}/.cursor/rules/: databricks_asset_bundles.mdc  databricks_asset_bundles_cursor_rules.mdc  databricks_general.mdc  delta_live_tables.mdc
template/{{.project_name}}/mcp/: pyproject.toml  server.py
template/{{.project_name}}/resources/: dlt_pipeline.yml  dlt_pipeline.yml.tmpl  example_dlt_pipeline.tmpl  example_dlt_pipeline.yml.tmpl
template/{{.project_name}}/src/: dlt_pipeline.py  example_dlt_pipeline.py
